css: Fix mobile horizontal scroll

--- a/src/pages/AboutPage.module.css
+++ b/src/pages/AboutPage.module.css
@@ -119,7 +119,7 @@
 }
 @media(max-width:480px){
   .macMockup {
-    width: 60%;
+    width: 50%;
     left: 20%;
     top: 45%;
     position: absolute;
@@ -140,15 +140,35 @@
   }
 /* 배경 이미지 로고 캐릭터 */
 
+@media(max-width:480px){
 .bgLogo {
   display: inline-block;
-  width: 500px;
-  margin: 3vw 0 0 12vw;
+  width: 80%;
+  margin: 40vw 0 0 12vw;
   opacity: 0.2;
 }
+}
 
+@media(min-width:481px){
+  .bgLogo {
+    display: inline-block;
+    width: 25%;
+    margin: 3vw 0 0 12vw;
+    opacity: 0.2;
+  }
+}
+
+@media(min-width:481px){
 .bgLogo img {
   width: 100%;
+}
+}
+
+@media(max-width:480px){
+  .bgLogo img {
+    width: 50%;
+    margin-top: 40%;
+  }
 }
 
 /* ========================================  */
@@ -278,7 +298,7 @@ h2 {
 
 @media(min-width:481px){
 .aboutimg {
-  width: 100%;
+  width: 80%;
 }
 }
 @media(max-width:480px){
@@ -308,11 +328,8 @@ h2 {
   top: 18vw;
 }
 
-.banner2icon > .icon3 {
-  position: absolute;
-  right: 12vw;
-  top: 32vw;
-}
+
+
 
 /* ========================================  */
 
@@ -438,13 +455,24 @@ font-weight: 400;
   }
   }
 
+
+
 /* 세 번째 배너 배경 아이콘 */
 .banner3icon {
   z-index: -999;
 }
 
+
+@media(min-width:481px){
 .banner3icon > .icon1, .icon2 {
   width: 6vw;
+}
+}
+
+@media(max-width:480px){
+  .banner3icon > .icon1, .icon2 {
+    display: none;
+  }
 }
 
 .banner3 > .icon1 {
@@ -474,6 +502,23 @@ font-weight: 400;
   z-index: 999;
 }
 
+@media(min-width:481px){
+  .mapPop1 {
+    width: 70%;
+    position: absolute;
+    top: 42%;
+    left: 50%;
+  }
+}
+
+@media(max-width:480px){
+  .mapPop1 {
+    width: 70%;
+    position: absolute;
+    top: 42%;
+    left: 30%;
+  }
+}
 
 
 /* ========================================  */
@@ -585,6 +630,7 @@ h2 {
   
 
 
+
 .banner4 > .icon1 {
   position: absolute;
   top: 1.5vw;
@@ -601,6 +647,7 @@ h2 {
   z-index: 10;
 }
 
+@media(min-width:481px){
 .banner4 > .icon3 {
   position: absolute;
   top: 52vw;
@@ -608,3 +655,14 @@ h2 {
   width: 40vw;
   z-index: 10;
 }
+}
+
+@media(min-width:481px){
+  .banner4 > .icon3 {
+    position: absolute;
+    top: 52vw;
+    left: 70vw;
+    width: 40vw;
+    z-index: 10;
+  }
+  }
